--- a/Q-ComplexNumber.html
+++ b/Q-ComplexNumber.html
@@ -37,33 +37,35 @@
 		<meta property="og:url"           content="https://quantumjavascript.app/ComplexNumber.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/ComplexNumber.html">
-		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<link href="assets/q-favicon-064.png" rel="icon" type="image/png">
+		<link href="assets/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" href="source/Q.css">
-		<link rel="stylesheet" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" href="other/documentation.css">
+		<link rel="stylesheet" href="Q/Q.css">
+		<link rel="stylesheet" href="Q/Q-Circuit-Editor.css">
+		<link rel="stylesheet" href="assets/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<script src="other/ga.js"></script>
-		<script src="source/Q.js"></script>
-		<script src="source/Q-ComplexNumber.js"></script>
-		<script src="source/Q-Matrix.js"></script>
-		<script src="source/Q-Qubit.js"></script>
-		<script src="source/Q-Gate.js"></script>
-		<script src="source/Q-History.js"></script>
-		<script src="source/Q-Circuit.js"></script>
-		<script src="source/Q-Circuit-Editor.js"></script>
-		<script src="other/navigation.js"></script>
+		<script src="assets/ga.js"></script>
+		<script src="Q/Q.js"></script>
+		<script src="Q/Q-ComplexNumber.js"></script>
+		<script src="Q/Q-Matrix.js"></script>
+		<script src="Q/Q-Qubit.js"></script>
+		<script src="Q/Q-Gate.js"></script>
+		<script src="Q/Q-History.js"></script>
+		<script src="Q/Q-Circuit.js"></script>
+		<script src="Q/Q-Circuit-Editor.js"></script>
+		<script src="assets/navigation.js"></script>
 		
 	</head>
 	<body>
 		<main class="api">
 			<p>
+				Source code:
 				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js?ts=4" target="_blank">
 					<code>Q-ComplexNumber.js</code>
 				</a>
 			</p>
+			<hr>
 			<h3 id="Real_numbers">Real numbers ℝ</h3>
 			<p>
 				Our regular, ordinary, everyday numbers are called
@@ -385,7 +387,7 @@ i.<a href="#.prototype.power">power</a>( 2 ).<a href="#.prototype.toText">toText
 				then that value is cloned and any remaining arguments are ignored.
 				If either of the arguments are <code>undefined</code> they are assumed to be zero.
 				If the first argument is not a <code>ComplexNumber</code>
-				and either of the arguments are not <a href="ComplexNumber.html#.isNumberLike">number-like</a>
+				and either of the arguments are not <a href="Q-ComplexNumber.html#.isNumberLike">number-like</a>
 				then an error is thrown.
 			</p>
 <pre><code>
@@ -409,9 +411,9 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dd>
 						<code class="value-type">Number</code>
 						Traditionally the first argument, 
-						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
+						a <a href="Q-ComplexNumber.html#.isNumberLike">number-like</a> value 
 						representing the <em>real</em> component of the 
-						<a href="ComplexNumber.html#Complex_numbers">complex number</a>.
+						<a href="Q-ComplexNumber.html#Complex_numbers">complex number</a>.
 					</dd>
 				</li>
 				<li>
@@ -419,9 +421,9 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dd>
 						<code class="value-type">Number</code>
 						Traditionally the second argument, 
-						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
+						a <a href="Q-ComplexNumber.html#.isNumberLike">number-like</a> value 
 						representing the <em>imaginary</em> component of the
-						<a href="ComplexNumber.html#Complex_numbers">complex number</a>.
+						<a href="Q-ComplexNumber.html#Complex_numbers">complex number</a>.
 					</dd>
 				</li>
 				<li>
