--- a/resources.html
+++ b/resources.html
@@ -28,33 +28,33 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ References">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/other/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ References">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/other/q-thumbnail.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		<meta property="og:url"           content="https://quantumjavascript.app/references.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/references.html">
-		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<link href="assets/q-favicon-064.png" rel="icon" type="image/png">
+		<link href="assets/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" href="source/Q.css">
-		<link rel="stylesheet" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" href="other/documentation.css">
+		<link rel="stylesheet" href="Q/Q.css">
+		<link rel="stylesheet" href="Q/Q-Circuit-Editor.css">
+		<link rel="stylesheet" href="assets/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<script src="other/ga.js"></script>
-		<script src="source/Q.js"></script>
-		<script src="source/Q-ComplexNumber.js"></script>
-		<script src="source/Q-Matrix.js"></script>
-		<script src="source/Q-Qubit.js"></script>
-		<script src="source/Q-Gate.js"></script>
-		<script src="source/Q-History.js"></script>
-		<script src="source/Q-Circuit.js"></script>
-		<script src="source/Q-Circuit-Editor.js"></script>
-		<script src="other/navigation.js"></script>
+		<script src="assets/ga.js"></script>
+		<script src="Q/Q.js"></script>
+		<script src="Q/Q-ComplexNumber.js"></script>
+		<script src="Q/Q-Matrix.js"></script>
+		<script src="Q/Q-Qubit.js"></script>
+		<script src="Q/Q-Gate.js"></script>
+		<script src="Q/Q-History.js"></script>
+		<script src="Q/Q-Circuit.js"></script>
+		<script src="Q/Q-Circuit-Editor.js"></script>
+		<script src="assets/navigation.js"></script>
 		
 	</head>
 	<body>
@@ -74,7 +74,7 @@
 
 
 			<h4>Dr. Talia Gershon explains quantum computing for WIRED (2018)</h4>
-			<img src="other/references/talia-gershon.jpg">
+			<img src="assets/references/talia-gershon.jpg">
 			<p>
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
@@ -99,7 +99,7 @@
 				Zach Weinersmith’s
 				“The Talk” (2016)
 			</h4>
-			<img src="other/references/the-talk.jpg">
+			<img src="assets/references/the-talk.jpg">
 			<p>
 				<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
 				<br>
@@ -131,7 +131,7 @@
 				“Quantum computing for computer scientists”
 				lecture for Microsoft Research (2018)
 			</h4>
-			<img src="other/references/andrew-helwer.jpg">
+			<img src="assets/references/andrew-helwer.jpg">
 			<p>
 				<a class="call-out" href="https://youtu.be/F_Riqjdh2oM" target="_blank">https://youtu.be/F_Riqjdh2oM</a>
 				<br>
@@ -156,7 +156,7 @@
 				Mirco Mannucci’s
 				“Quantum Computing for Computer Scientists” (2008)
 			</h4>
-			<img src="other/references/quantum-computing-for-computer-scientists.jpg">
+			<img src="assets/references/quantum-computing-for-computer-scientists.jpg">
 			<p>
 				<!--
 				<a class="call-out" target="https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf" target="_blank">https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf</a> (This linked PDF includes the table of contents and preface only.)
@@ -181,7 +181,7 @@
 				Isaac Chuang’s
 				“Quantum computation and quantum information” (2000, 2010)
 			</h4>
-			<img src="other/references/quantum-computing-and-quantum-information.jpg">
+			<img src="assets/references/quantum-computing-and-quantum-information.jpg">
 			<p>
 				<a class="call-out" href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
 				<br>
@@ -221,12 +221,12 @@
 				Published just days after I began work on Q.js, 
 				this blog post by Gwilym Newton of IBM solved a problem I was banging my head against the wall over:
 				How to properly convert a qubit’s 
-				<code><a href="Qubit.html#this.alpha">alpha</a></code>
+				<code><a href="Q-Qubit.html#this.alpha">alpha</a></code>
 				and 
-				<code><a href="Qubit.html#this.beta">beta</a></code> 
-				properties in to <a href="Qubit.html#.toBlochSphere">phi and theta angles</a>!
+				<code><a href="Q-Qubit.html#this.beta">beta</a></code> 
+				properties in to <a href="Q-Qubit.html#.toBlochSphere">phi and theta angles</a>!
 				If you’re building your own 
-				<a href="Qubit.html#Bloch_sphere">Bloch Sphere visualizer</a>
+				<a href="Q-Qubit.html#Bloch_sphere">Bloch Sphere visualizer</a>
 				you’ll notice this is surprisingly difficult to find code examples of.
 				Gwilym’s description helped me out.
 				<br>
