--- a/Q.html
+++ b/Q.html
@@ -37,33 +37,35 @@
 		<meta property="og:url"           content="https://quantumjavascript.app/Q.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/Q.html">
-		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<link href="assets/q-favicon-064.png" rel="icon" type="image/png">
+		<link href="assets/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" href="source/Q.css">
-		<link rel="stylesheet" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" href="other/documentation.css">
+		<link rel="stylesheet" href="Q/Q.css">
+		<link rel="stylesheet" href="Q/Q-Circuit-Editor.css">
+		<link rel="stylesheet" href="assets/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<script src="other/ga.js"></script>
-		<script src="source/Q.js"></script>
-		<script src="source/Q-ComplexNumber.js"></script>
-		<script src="source/Q-Matrix.js"></script>
-		<script src="source/Q-Qubit.js"></script>
-		<script src="source/Q-Gate.js"></script>
-		<script src="source/Q-History.js"></script>
-		<script src="source/Q-Circuit.js"></script>
-		<script src="source/Q-Circuit-Editor.js"></script>
-		<script src="other/navigation.js"></script>
+		<script src="assets/ga.js"></script>
+		<script src="Q/Q.js"></script>
+		<script src="Q/Q-ComplexNumber.js"></script>
+		<script src="Q/Q-Matrix.js"></script>
+		<script src="Q/Q-Qubit.js"></script>
+		<script src="Q/Q-Gate.js"></script>
+		<script src="Q/Q-History.js"></script>
+		<script src="Q/Q-Circuit.js"></script>
+		<script src="Q/Q-Circuit-Editor.js"></script>
+		<script src="assets/navigation.js"></script>
 		
 	</head>
 	<body>
 		<main class="api">
 			<p>
+				Source code: 
 				<a href="https://github.com/stewdio/q.js/blob/master/source/Q.js?ts=4" target="_blank">
 					<code>Q.js</code>
 				</a>
 			</p>
+			<hr>
 			<h3>The Q object</h3>
 			<p>
 				The root of Q.js is the <code>Q</code> object.
@@ -74,7 +76,7 @@
 				Most conveniently, 
 				the <code>Q</code> object is actually a function
 				that wraps the 
-				<code>Q.<a href="Circuit.html">Circuit</a>.<a href="Circuit.html#fromText">fromText</a></code> function.
+				<code>Q.<a href="Q-Circuit.html">Circuit</a>.<a href="Q-Circuit.html#fromText">fromText</a></code> function.
 				This makes defining quantum circuits incredibly brief.
 			</p>
 <pre><code>
@@ -85,7 +87,7 @@ var circuit = Q`
 `
 </code></pre>
 			<p>
-				See <a href="Circuit.html#Writing_quantum_circuits">“Writing quantum circuits”</a> for more details.
+				See <a href="Q-Circuit.html#Writing_quantum_circuits">“Writing quantum circuits”</a> for more details.
 			</p>
 			<hr>
 			<h3>Properties</h3>
@@ -206,8 +208,8 @@ var circuit = Q`
 						for the following equality to be true
 						when using JavaScript’s floating point implementation:
 <pre><code>
-var a = new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 1, 2 )
-a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="ComplexNumber.html#.prototype.multiply">isEqualTo</a>( a.<a href="ComplexNumber.html#.prototype.power">power</a>( 2 ))
+var a = new Q.<a href="Q-ComplexNumber.html">ComplexNumber</a>( 1, 2 )
+a.<a href="Q-ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Q-ComplexNumber.html#.prototype.multiply">isEqualTo</a>( a.<a href="Q-ComplexNumber.html#.prototype.power">power</a>( 2 ))
 </code>
 <samp>true</samp></pre>
 					</dd>
