--- a/contributing.html
+++ b/contributing.html
@@ -28,12 +28,12 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ Contributing">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/other/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ Contributing">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/other/q-thumbnail.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		<meta property="og:url"           content="https://quantumjavascript.app/contributing.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/contributing.html">
