Forward to new domain.

--- a/playground.html
+++ b/playground.html
@@ -80,14 +80,8 @@ H#1-Z#2-I-X-H-X#1-X#1-H-X
 H#2-I---I-I-I-I---I---I-I
 
 
-H-I-X#0-I---I-H
-H-I-I---X#0-I-H
-X-H-X#1-X#1-H-X
-I-I-I---I---I-I
 
 
---->
-			<textarea class="Q-circuit-text-input" id="playground-input">
 I---I---I
 H#0-Z#0-I
 I---Z#1-I
@@ -95,7 +89,15 @@ H#1-Z#2-I
 H#2-I---I
 I---I---I
 I---I---I
-I---I---I</textarea>
+I---I---I
+
+--->
+			<textarea class="Q-circuit-text-input" id="playground-input">
+H-I-X#0-I---I-H
+H-I-I---X#0-I-H
+X-H-X#1-X#1-H-X
+I-I-I---I---I-I
+</textarea>
 			<p class="right">
 				<button class="Q-button" id="playground-apply-button" type="button" onclick="updatePlaygroundFromText()">
 					Apply
@@ -368,7 +370,7 @@ window.addEventListener( 'DOMContentLoaded', function(){
 
 
 //  EVALUATION.
-/*
+
 window.addEventListener( 'Q.Circuit.evaluate began', function( event ){
 
 	console.log( 
@@ -425,7 +427,7 @@ window.addEventListener( 'Q gui altered circuit', function( event ){
 
 	updatePlaygroundFromDom( event.detail.circuit )
 })
-*/
+
 
 
 
