Fixed multi-register operation decomposition.

--- a/tutorials.html
+++ b/tutorials.html
@@ -59,7 +59,7 @@
 	</head>
 	<body>
 		<main>
-			<h3>Expanding soon</h3>
+			<h3>Expanding soon…</h3>
 			<p>
 				What good is a novel drag-and-drop circuit editor interface
 				if no one knows how to use it?
