--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Quantum JavaScript</title>
+		<title>Quantum JavaScript (Q.js)</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
 		<meta name="description"          content="Quantum computing in your browser.">
@@ -26,12 +26,12 @@
 		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
-		<meta name="twitter:title"        content="Quantum JavaScript">
+		<meta name="twitter:title"        content="Quantum JavaScript (Q.js)">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
 		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
-		<meta property="og:title"         content="Quantum JavaScript">
+		<meta property="og:title"         content="Quantum JavaScript (Q.js)">
 		<meta property="og:description"   content="Quantum computing in your browser.">
 		<meta property="og:image"         content="https://quantumjavascript.app/assets/q-thumbnail.png">
 		<meta property="og:url"           content="https://quantumjavascript.app/">
