Added link to tutorial example.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 				so jump right in and experiment!
 				Here’s your first quantum circuit—a 
 				<a href="https://en.wikipedia.org/wiki/Bell_state" target="_blank">Bell state</a>.	
+				(<a href="tutorials.html#Create_controlled_gates">Here’s how to make one!</a>)
 				Tap and drag the pieces around to get a feel for the Q editor.
 				It’s easy to use on both desktop and mobile devices.
 				Made a mistake? Just tap the Undo button.
